--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -11,7 +11,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>596</width>
+            <width>592</width>
             <height>533</height>
         </rect>
     </property>
@@ -732,6 +732,12 @@
         <signal>clicked()</signal>
         <receiver>MainWindow_UI</receiver>
         <slot>deleteKey()</slot>
+    </connection>
+    <connection>
+        <sender>certList</sender>
+        <signal>doubleClicked(QListBoxItem*)</signal>
+        <receiver>MainWindow_UI</receiver>
+        <slot>showDetailsCert()</slot>
     </connection>
     <slot access="public">deleteCert()</slot>
     <slot access="public">deleteKey()</slot>
