--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -11,7 +11,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>599</width>
+            <width>595</width>
             <height>533</height>
         </rect>
     </property>
@@ -653,136 +653,8 @@
             </property>
             <attribute>
                 <name>title</name>
-                <string>Zertifikats Authorität</string>
+                <string>Einstellungen</string>
             </attribute>
-            <widget>
-                <class>QGroupBox</class>
-                <property stdset="1">
-                    <name>name</name>
-                    <cstring>GroupBox6</cstring>
-                </property>
-                <property stdset="1">
-                    <name>geometry</name>
-                    <rect>
-                        <x>20</x>
-                        <y>20</y>
-                        <width>530</width>
-                        <height>180</height>
-                    </rect>
-                </property>
-                <property stdset="1">
-                    <name>title</name>
-                    <string>Unterschreiben mit</string>
-                </property>
-                <widget>
-                    <class>QLabel</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>TextLabel1</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>geometry</name>
-                        <rect>
-                            <x>11</x>
-                            <y>40</y>
-                            <width>170</width>
-                            <height>20</height>
-                        </rect>
-                    </property>
-                    <property stdset="1">
-                        <name>text</name>
-                        <string>Eigenes Rootzertifikat</string>
-                    </property>
-                </widget>
-                <widget>
-                    <class>QLabel</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>TextLabel2</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>geometry</name>
-                        <rect>
-                            <x>11</x>
-                            <y>80</y>
-                            <width>170</width>
-                            <height>20</height>
-                        </rect>
-                    </property>
-                    <property stdset="1">
-                        <name>text</name>
-                        <string>zu unterschreibende Anfrage</string>
-                    </property>
-                </widget>
-                <widget>
-                    <class>QLabel</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>TextLabel3</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>geometry</name>
-                        <rect>
-                            <x>11</x>
-                            <y>120</y>
-                            <width>170</width>
-                            <height>20</height>
-                        </rect>
-                    </property>
-                    <property stdset="1">
-                        <name>text</name>
-                        <string>Name des neuen Zertifikats</string>
-                    </property>
-                </widget>
-                <widget>
-                    <class>QComboBox</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>CArootcert</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>geometry</name>
-                        <rect>
-                            <x>190</x>
-                            <y>40</y>
-                            <width>320</width>
-                            <height>22</height>
-                        </rect>
-                    </property>
-                </widget>
-                <widget>
-                    <class>QComboBox</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>CAreq</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>geometry</name>
-                        <rect>
-                            <x>190</x>
-                            <y>80</y>
-                            <width>320</width>
-                            <height>22</height>
-                        </rect>
-                    </property>
-                </widget>
-                <widget>
-                    <class>QLineEdit</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>CAcert</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>geometry</name>
-                        <rect>
-                            <x>190</x>
-                            <y>120</y>
-                            <width>320</width>
-                            <height>22</height>
-                        </rect>
-                    </property>
-                </widget>
-            </widget>
         </widget>
     </widget>
 </widget>
@@ -808,22 +680,10 @@
         <slot>newKey()</slot>
     </connection>
     <connection>
-        <sender>detailsKey</sender>
-        <signal>clicked()</signal>
-        <receiver>MainWindow_UI</receiver>
-        <slot>showDetailsKey()</slot>
-    </connection>
-    <connection>
         <sender>PushButton13</sender>
         <signal>clicked()</signal>
         <receiver>MainWindow_UI</receiver>
         <slot>newReq()</slot>
-    </connection>
-    <connection>
-        <sender>PushButton25</sender>
-        <signal>clicked()</signal>
-        <receiver>MainWindow_UI</receiver>
-        <slot>showDetailsReq()</slot>
     </connection>
     <connection>
         <sender>PushButton26</sender>
@@ -874,12 +734,6 @@
         <slot>loadCert()</slot>
     </connection>
     <connection>
-        <sender>PushButton25_2</sender>
-        <signal>clicked()</signal>
-        <receiver>MainWindow_UI</receiver>
-        <slot>showDetailsCert()</slot>
-    </connection>
-    <connection>
         <sender>PushButton26_2</sender>
         <signal>clicked()</signal>
         <receiver>MainWindow_UI</receiver>
@@ -891,6 +745,24 @@
         <receiver>MainWindow_UI</receiver>
         <slot>deleteKey()</slot>
     </connection>
+    <connection>
+        <sender>keyList</sender>
+        <signal>doubleClicked(QListViewItem*)</signal>
+        <receiver>MainWindow_UI</receiver>
+        <slot>showDetailsKey(QListViewItem *)</slot>
+    </connection>
+    <connection>
+        <sender>reqList</sender>
+        <signal>doubleClicked(QListViewItem*)</signal>
+        <receiver>MainWindow_UI</receiver>
+        <slot>showDetailsReq(QListViewItem *)</slot>
+    </connection>
+    <connection>
+        <sender>certList</sender>
+        <signal>doubleClicked(QListViewItem*)</signal>
+        <receiver>MainWindow_UI</receiver>
+        <slot>showDetailsCert(QListViewItem *)</slot>
+    </connection>
     <slot access="public">deleteCert()</slot>
     <slot access="public">deleteKey()</slot>
     <slot access="public">deleteReq()</slot>
@@ -900,9 +772,9 @@
     <slot access="public">newCert()</slot>
     <slot access="public">newKey()</slot>
     <slot access="public">newReq()</slot>
-    <slot access="public">showDetailsCert()</slot>
-    <slot access="public">showDetailsKey()</slot>
-    <slot access="public">showDetailsReq()</slot>
+    <slot access="public">showDetailsCert(QListViewItem *)</slot>
+    <slot access="public">showDetailsKey(QListViewItem *)</slot>
+    <slot access="public">showDetailsReq(QListViewItem *)</slot>
     <slot access="public">writeCert()</slot>
     <slot access="public">writeKey()</slot>
     <slot access="public">writeReq()</slot>
