--- a/NewX509Req.ui
+++ b/NewX509Req.ui
@@ -11,7 +11,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>648</width>
+            <width>644</width>
             <height>463</height>
         </rect>
     </property>
@@ -63,26 +63,6 @@
             <enum>Sunken</enum>
         </property>
         <widget>
-            <class>QLineEdit</class>
-            <property stdset="1">
-                <name>name</name>
-                <cstring>LineEdit8</cstring>
-            </property>
-            <property stdset="1">
-                <name>enabled</name>
-                <bool>false</bool>
-            </property>
-            <property stdset="1">
-                <name>geometry</name>
-                <rect>
-                    <x>10</x>
-                    <y>90</y>
-                    <width>260</width>
-                    <height>23</height>
-                </rect>
-            </property>
-        </widget>
-        <widget>
             <class>QLabel</class>
             <property stdset="1">
                 <name>name</name>
@@ -107,6 +87,22 @@
             </property>
             <property>
                 <name>wordwrap</name>
+            </property>
+        </widget>
+        <widget>
+            <class>QLineEdit</class>
+            <property stdset="1">
+                <name>name</name>
+                <cstring>challenge</cstring>
+            </property>
+            <property stdset="1">
+                <name>geometry</name>
+                <rect>
+                    <x>10</x>
+                    <y>90</y>
+                    <width>260</width>
+                    <height>23</height>
+                </rect>
             </property>
         </widget>
     </widget>
@@ -529,26 +525,6 @@
         <class>QLabel</class>
         <property stdset="1">
             <name>name</name>
-            <cstring>TextLabel10</cstring>
-        </property>
-        <property stdset="1">
-            <name>geometry</name>
-            <rect>
-                <x>20</x>
-                <y>60</y>
-                <width>610</width>
-                <height>50</height>
-            </rect>
-        </property>
-        <property stdset="1">
-            <name>text</name>
-            <string>Das hier wird noch eine ziemlich ausführliche Erklärung, was zu tun ist.</string>
-        </property>
-    </widget>
-    <widget>
-        <class>QLabel</class>
-        <property stdset="1">
-            <name>name</name>
             <cstring>PixmapLabel3</cstring>
         </property>
         <property stdset="1">
@@ -580,8 +556,8 @@
             <rect>
                 <x>20</x>
                 <y>10</y>
-                <width>250</width>
-                <height>30</height>
+                <width>500</width>
+                <height>40</height>
             </rect>
         </property>
         <property stdset="1">
@@ -595,6 +571,26 @@
         <property stdset="1">
             <name>text</name>
             <string>Neue Zertifikats Unterschriftsanfrage</string>
+        </property>
+    </widget>
+    <widget>
+        <class>QLabel</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>TextLabel10</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>20</x>
+                <y>50</y>
+                <width>610</width>
+                <height>60</height>
+            </rect>
+        </property>
+        <property stdset="1">
+            <name>text</name>
+            <string>Das hier wird noch eine ziemlich ausführliche Erklärung, was zu tun ist.</string>
         </property>
     </widget>
 </widget>
@@ -626,7 +622,7 @@
     <tabstop>organisationalUnitName</tabstop>
     <tabstop>commonName</tabstop>
     <tabstop>emailAddress</tabstop>
-    <tabstop>LineEdit8</tabstop>
+    <tabstop>challenge</tabstop>
     <tabstop>keyList</tabstop>
     <tabstop>PushButton14</tabstop>
     <tabstop>PushButton15</tabstop>
