--- a/PassWrite.ui
+++ b/PassWrite.ui
@@ -11,42 +11,14 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>387</width>
-            <height>273</height>
+            <width>379</width>
+            <height>282</height>
         </rect>
     </property>
     <property stdset="1">
         <name>caption</name>
         <string>Passwort</string>
     </property>
-    <widget>
-        <class>QLabel</class>
-        <property stdset="1">
-            <name>name</name>
-            <cstring>heading</cstring>
-        </property>
-        <property stdset="1">
-            <name>geometry</name>
-            <rect>
-                <x>20</x>
-                <y>10</y>
-                <width>370</width>
-                <height>50</height>
-            </rect>
-        </property>
-        <property stdset="1">
-            <name>font</name>
-            <font>
-                <pointsize>14</pointsize>
-                <bold>1</bold>
-                <underline>1</underline>
-            </font>
-        </property>
-        <property stdset="1">
-            <name>text</name>
-            <string>RSA Schlüssel speichern</string>
-        </property>
-    </widget>
     <widget>
         <class>QPushButton</class>
         <property stdset="1">
@@ -57,7 +29,7 @@
             <name>geometry</name>
             <rect>
                 <x>20</x>
-                <y>220</y>
+                <y>240</y>
                 <width>108</width>
                 <height>32</height>
             </rect>
@@ -77,7 +49,7 @@
             <name>geometry</name>
             <rect>
                 <x>260</x>
-                <y>220</y>
+                <y>240</y>
                 <width>110</width>
                 <height>32</height>
             </rect>
@@ -97,7 +69,7 @@
             <name>geometry</name>
             <rect>
                 <x>20</x>
-                <y>90</y>
+                <y>110</y>
                 <width>350</width>
                 <height>110</height>
             </rect>
@@ -110,46 +82,6 @@
             <name>frameShadow</name>
             <enum>Sunken</enum>
         </property>
-        <widget>
-            <class>QLineEdit</class>
-            <property stdset="1">
-                <name>name</name>
-                <cstring>passA</cstring>
-            </property>
-            <property stdset="1">
-                <name>geometry</name>
-                <rect>
-                    <x>100</x>
-                    <y>20</y>
-                    <width>230</width>
-                    <height>23</height>
-                </rect>
-            </property>
-            <property stdset="1">
-                <name>echoMode</name>
-                <enum>Password</enum>
-            </property>
-        </widget>
-        <widget>
-            <class>QLineEdit</class>
-            <property stdset="1">
-                <name>name</name>
-                <cstring>passB</cstring>
-            </property>
-            <property stdset="1">
-                <name>geometry</name>
-                <rect>
-                    <x>100</x>
-                    <y>60</y>
-                    <width>230</width>
-                    <height>23</height>
-                </rect>
-            </property>
-            <property stdset="1">
-                <name>echoMode</name>
-                <enum>Password</enum>
-            </property>
-        </widget>
         <widget>
             <class>QLabel</class>
             <property stdset="1">
@@ -198,6 +130,105 @@
                 <string>Passwort:</string>
             </property>
         </widget>
+        <widget>
+            <class>QLineEdit</class>
+            <property stdset="1">
+                <name>name</name>
+                <cstring>passB</cstring>
+            </property>
+            <property stdset="1">
+                <name>geometry</name>
+                <rect>
+                    <x>100</x>
+                    <y>60</y>
+                    <width>230</width>
+                    <height>23</height>
+                </rect>
+            </property>
+            <property stdset="1">
+                <name>echoMode</name>
+                <enum>Password</enum>
+            </property>
+        </widget>
+        <widget>
+            <class>QLineEdit</class>
+            <property stdset="1">
+                <name>name</name>
+                <cstring>passA</cstring>
+            </property>
+            <property stdset="1">
+                <name>geometry</name>
+                <rect>
+                    <x>100</x>
+                    <y>20</y>
+                    <width>230</width>
+                    <height>23</height>
+                </rect>
+            </property>
+            <property stdset="1">
+                <name>echoMode</name>
+                <enum>Password</enum>
+            </property>
+        </widget>
+    </widget>
+    <widget>
+        <class>QLabel</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>title</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>20</x>
+                <y>10</y>
+                <width>350</width>
+                <height>30</height>
+            </rect>
+        </property>
+        <property stdset="1">
+            <name>font</name>
+            <font>
+                <pointsize>14</pointsize>
+                <bold>1</bold>
+                <underline>1</underline>
+            </font>
+        </property>
+        <property stdset="1">
+            <name>frameShape</name>
+            <enum>MShape</enum>
+        </property>
+        <property stdset="1">
+            <name>frameShadow</name>
+            <enum>MShadow</enum>
+        </property>
+        <property stdset="1">
+            <name>text</name>
+            <string>Passwort</string>
+        </property>
+    </widget>
+    <widget>
+        <class>QLabel</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>description</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>20</x>
+                <y>50</y>
+                <width>350</width>
+                <height>50</height>
+            </rect>
+        </property>
+        <property stdset="1">
+            <name>alignment</name>
+            <set>WordBreak|AlignVCenter|AlignLeft</set>
+        </property>
+        <property>
+            <name>wordwrap</name>
+        </property>
     </widget>
 </widget>
 <connections>
